--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>Challenge: Write a Poem</title>
+        <title>sachie.org</title>
 
         <meta charset="utf-8">
 
