--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <body>
         <h1>sachie.org</h1>Hi hi I am sorry I'm do years old
         <p> hi i Vsauce Michael here
-        <br>kihjjnujnjn8nbxjcdnjncdgdcycyfccffdcfcfdfcgfdsdsfaffafdffdffdfyehfttetjteateateeytaaeyuateuatttyeuyteuateyetuyedjejtjdtqj
-        <br>bjbcnccnbcnbbcbbcbbcbccbcbcbdbbdbcdbdnbcnbcmjgujvjvjivik
-        </p>Call me okay okay how do yoy I'm do years oldu knowHi hi I am sorr 
+        <br>You are very cool.
+            <b>Call me okay okay how do yoy I'm do years oldu knowHi hi I am sorr</b> 
+        </p>
         
         
     </body>
