--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE HTML>
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,12 +6,17 @@
     <body>
         <img src="https://3c1703fe8d.site.internapcdn.net/newman/csz/news/800/2013/1-stressedoutt.jpg"></img>
     <img src="https://i.ytimg.com/vi/PB5FosTwM8s/maxresdefault.jpg"></img>
-        <p>Catfire the video game is a 1# game that is a game that the tadpoles are the villens and the cats are the heros the cats defeat the tadpoles but you start out as the tadpole and kill the cats but later on in the game after you are really good and  maxout all the lizards you become the cats.</p>
+        <p>catfire the video game is a 1# game that is a game that the tadpoles are the villens and the cats are the heros the cats defeat the tadpoles but you start out as the tadpole and kill the cats but later on in the game after you are really good and  maxout all the lizards you become the cats.</p>
         <p>we all know how bad we think the game is now but later on you will find out how good catfire is but anyway lets start geting to the real cocepts about catfire.</p>
         <p>Now lets talk about the maker Sachin Shankar. Sachin is a profesional coder and made catfire sachin aporoved as he went thourgh elementary school he is a really good coder and has writen 298 books each with 657 pages, about coding and how fun it is even thoough its really hard to code we can always do it. On book #108 page 567 he says "i aporove  how hard it is to do coding but it always worth a try." Sachin has always coded and now he codes at Microsoft and xbox 45 user chamber catfire.</p>
         <p>As if now lets talk about catfire. Catfire of corse is a awesome game for cat and dog suporters. It's how a tadpole finds his way to a cat saint("god") and his name is catfire and thats how this games name is catfire because of that cat. The tadpoles name is dogfire and once catfire finds it out catfire gets really mad a-wait wait wait wait was I about to tell you the seceret of catfire? well, sorry NO catfire secret knowing.</p>
         <p>well anyway I hope you like catfire so far and how there's 164 boses inculeding the ones at the end of the game! And anyway buy catfire on the xbox 45s for $13.99 and play it all day!!!!</p>
         <img src="https://thumb9.shutterstock.com/display_pic_with_logo/164054916/520474972/stock-vector-cat-ninja-standing-with-a-sword-vector-mascot-warrior-character-520474972.jpg"</img>
         <img src="https://thumb1.shutterstock.com/display_pic_with_logo/88446/120501214/stock-vector-warrior-ninja-cyborg-soldier-vector-120501214.jpg"></img>
+        <h1>more to sachin click the button to learn more about Sachin</h1>
+
+        <button type="button" onclick="alert('this website wants to go to a web')">more about sachin!</button>
+ 
+        
     </body>
 </html>
