--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>catfire.com</title>
     </head>
     <body>
-        <h1>catfire</h1>
+        <h1>Hello World!</h1>
 
 <button onclick="myFunction()">Set background</button>
         <style>
