--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
         <img src="https://thumb1.shutterstock.com/display_pic_with_logo/88446/120501214/stock-vector-warrior-ninja-cyborg-soldier-vector-120501214.jpg"></img>
         <h1>more to sachin click the button to learn more about Sachin</h1>
 
-        <button type="button" onclick="alert('this website wants to go to a web')">more about sachin!</button>
+        <button type="button" onclick="alert('please type your username and passward')">more about sachin!</button>
  
         
     </body>
