--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@ body {
 
 
 
-        <button type="button" onclick="alert('this website wants to go to a web')">more about sachin!</button>
+        <button type="button" onclick="alert('please type your passward and username')">more about sachin!</button>
 
  
