--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 
 <html>
 
@@ -10,7 +10,7 @@
 
     <body>
 
-        <h1>Catfire The Video Game</h1>
+        <h1>Hello World!</h1>
 
 
 
@@ -20,7 +20,7 @@
 
 body {
 
-  background-image: url('cool cat.jpg');
+  background-image: url('img_cool cat.jpg');
 
   background-repeat: no-repeat;
 
@@ -58,6 +58,6 @@ body {
 
 
 
-        <button type="button" onclick="alert('please type your passward and username')">more about sachin!</button>
+        <button type="button" onclick="alert('this website wants to go to a web')">more about sachin!</button>
 
  
