--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -10,7 +10,7 @@
 
     <body>
 
-        <h1>Hello World!</h1>
+        <h1>Catfire The Video Game</h1>
 
 
 
