--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
   background-image: url('img_girl.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
-  background-size: cover;
+  background-size: 100% 100%;
 }
 
 
