--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
      <style>
 body {
-  background-image: url('img_girl.jpg');
+  background-image: url('https://i.ytimg.com/vi/PB5FosTwM8s/maxresdefault.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: 100% 100%;
