--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
 
-        <title>catfire.com</title>
+        <title>Test</title>
 
     </head>
 
@@ -14,7 +14,7 @@
 
 
 
-<button onclick="myFunction()">Set background</button>
+<button onclick="alert()">Set background</button>
 
 
 
