--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
      <style>
 body {
-  background-image: url('https://i.ytimg.com/vi/PB5FosTwM8s/maxresdefault.jpg');
+  background-image: url('https://res.cloudinary.com/teepublic/image/private/s--8aUhddqI--/t_Preview/b_rgb:0195c3,c_limit,f_jpg,h_630,q_90,w_630/v1505890793/production/designs/1918421_0.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: 100% 100%;
