--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
     <img src="https://i.ytimg.com/vi/PB5FosTwM8s/maxresdefault.jpg"></img>
 
-        <p>catfire the video game is a 1# game that is a game that the tadpoles are the villens and the cats are the heros the cats defeat the tadpoles but you start out as the tadpole and kill the cats but later on in the game after you are really good and  maxout all the lizards you become the cats.</p>
+        <p>catfire the video game is a 1# game that is a game that the tadpoles are the villens and the cats are the heros the cats defeat the tadpoles but you start out as the tadpole and kill the cats but later on in the game after you are really good and  maxout all the tadpoles you become the cats.</p>
 
         <p>we all know how bad we think the game is now but later on you will find out how good catfire is but anyway lets start geting to the real cocepts about catfire.</p>
 
