--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 
         <p>we all know how bad we think the game is now but later on you will find out how good catfire is but anyway lets start geting to the real cocepts about catfire.</p>
 
-        <p>Now lets talk about the maker Sachin Shankar. Sachin is a profesional coder and made catfire sachin aporoved as he went thourgh elementary school he is a really good coder and has writen 298 books each with 657 pages, about coding and how fun it is even thoough its really hard to code we can always do it. On book #108 page 567 he says "i aporove  how hard it is to do coding but it always worth a try." Sachin has always coded and now he codes at Microsoft and xbox 45 user chamber catfire.</p>
+        <p>Now lets talk about the maker Sachin Shankar. Sachin is a profesional coder and made catfire sachin aporoved as he went thourgh elementary school he is a really good coder and has writen 298 books each with 657 pages, about coding and how fun it is even though its really hard to code we can always do it. On book #108 page 567 he says "i aporove  how hard it is to do coding but it always worth a try." Sachin has always coded and now he codes at Microsoft and xbox 45 user chamber catfire.</p>
 
         <p>As if now lets talk about catfire. Catfire of corse is a awesome game for cat and dog suporters. It's how a tadpole finds his way to a cat saint("god") and his name is catfire and thats how this games name is catfire because of that cat. The tadpoles name is dogfire and once catfire finds it out catfire gets really mad a-wait wait wait wait was I about to tell you the seceret of catfire? well, sorry NO catfire secret knowing.</p>
 
