--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 
+
+
+
+
 <html>
 
+
+
     <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">    
+
+
 
         <title>catfire</title>
 
+
+
     </head>
+
+
 
     <body>
 
+
+
         <h1>Catfire The Video Game</h1>
+
+
+
+
 
 
 
@@ -20,20 +39,258 @@
 
 
 
+
+
+
+
+
+
      <style>
+
 body {
+
   background-image: url('https://res.cloudinary.com/teepublic/image/private/s--8aUhddqI--/t_Preview/b_rgb:0195c3,c_limit,f_jpg,h_630,q_90,w_630/v1505890793/production/designs/1918421_0.jpg');
+
   background-repeat: no-repeat;
+
   background-attachment: fixed;  
+
   background-size: 100% 100%;
-  }
+
+}
+
+
+
+
+
+
 
 
 
 
 
 </style>
+
 <body>
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+
+
+
+/* Set a style for all buttons */
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+  
+  
+}
+</style>
+</head>
+<body>
+
+<h2>Modal Login Form</h2>
+
+<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('id01');
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -41,26 +298,50 @@ body {
 
         <img src="https://3c1703fe8d.site.internapcdn.net/newman/csz/news/800/2013/1-stressedoutt.jpg"></img>
 
+
+
     <img src="https://i.ytimg.com/vi/PB5FosTwM8s/maxresdefault.jpg"></img>
+
+
 
         <p>catfire the video game is a 1# game that is a game that the tadpoles are the villens and the cats are the heros the cats defeat the tadpoles but you start out as the tadpole and kill the cats but later on in the game after you are really good and  maxout all the tadpoles you become the cats.</p>
 
+
+
         <p>we all know how bad we think the game is now but later on you will find out how good catfire is but anyway lets start geting to the real cocepts about catfire.</p>
+
+
 
         <p>Now lets talk about the maker Sachin Shankar. Sachin is a profesional coder and made catfire sachin aporoved as he went thourgh elementary school he is a really good coder and has writen 298 books each with 657 pages, about coding and how fun it is even though its really hard to code we can always do it. On book #108 page 567 he says "i aporove  how hard it is to do coding but it always worth a try." Sachin has always coded and now he codes at Microsoft and xbox 45 user chamber catfire.</p>
 
+
+
         <p>As if now lets talk about catfire. Catfire of corse is a awesome game for cat and dog suporters. It's how a tadpole finds his way to a cat saint("god") and his name is catfire and thats how this games name is catfire because of that cat. The tadpoles name is dogfire and once catfire finds it out catfire gets really mad a-wait wait wait wait was I about to tell you the seceret of catfire? well, sorry NO catfire secret knowing.</p>
+
+
 
         <p>well anyway I hope you like catfire so far and how there's 164 boses inculeding the ones at the end of the game! And anyway buy catfire on the xbox 45s for $13.99 and play it all day!!!!</p>
 
+
+
         <img src="https://thumb9.shutterstock.com/display_pic_with_logo/164054916/520474972/stock-vector-cat-ninja-standing-with-a-sword-vector-mascot-warrior-character-520474972.jpg"</img>
 
+
+
         <img src="https://thumb1.shutterstock.com/display_pic_with_logo/88446/120501214/stock-vector-warrior-ninja-cyborg-soldier-vector-120501214.jpg"></img>
+
+
 
         <h1>more to sachin click the button to learn more about Sachin</h1>
 
 
 
+
+
+
+
         <button type="button" onclick="alert('please type your passward and username')">more about sachin!</button>
+
+
 
  
